--- a/index.html
+++ b/index.html
@@ -1,7 +1,42 @@
-### Hello there 👋
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="styles.scss">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    </head>
+    
+    <body>
+        <header class="header">
+            <a href="" class="logo">
+                <span>rubatista</span>
+            </a>
 
-- 🔭 I’m currently working on <a href="https://dreamshaper.com/en/">Dreamshaper</a>
-- 🌱 I’m currently learning more about vue3 + Nuxt3 + Tailwindcss + javascript
-- 👯 I’m looking to collaborate on some freelance projects
-- ⚡ Fun fact: I'm a dog lover, owner of a dachshund (<a href="https://www.instagram.com/the.mini.daisy/" target="_blank" style="color: #FFC0CB !important;" >Daisy</a> 🌸)
-- :motorcycle: Owner of [Honda CB650R 2023](https://www.instagram.com/rubb.moto/)
+            <ul class="nav-link">
+                <li>
+                    <a href="#about">About</a>
+                </li>
+
+                <li>
+                    <a href="#experience">Experience</a>
+                </li>
+
+                <li>
+                    <a href="#projects">Projects</a>
+                </li>
+
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+
+            <i class="fa-solid fa-bars" id="menu-icon"></i>
+
+            <button class="visit-btn">Github</button>
+        </header>
+
+        <script src="script.js"></script>
+    </body>
+</html>
