--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
         <link rel="stylesheet" href="styles.scss">
-        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     
     <body>
@@ -37,6 +39,31 @@
 
             <button class="visit-btn">Github</button>
         </header>
+
+        <section id="about" class="about">
+            <div class="about-container">
+                <img src="profilepic.jpg" class="profile-img" alt="">
+
+                <div class="info-box">
+                    <div class="text">
+                        <h3>Hi, I'm</h3>
+                        <h1>Ruben Baptista</h1>
+                        <span>Frontend Developer</span>
+                    </div>
+
+                    <div class="btn-group">
+                        <div class="btn">Download CV</div>
+                        <div class="btn">Contact</div>
+                    </div>
+
+                    <div class="socials">
+                        <i class="fa-brands fa-square-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <script src="script.js"></script>
     </body>
