feat: add projects section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,42 @@
                 <img src="profilepic.jpg" alt="">
             </div>
             
-            
+            <section id="projects" class="projects">
+                <h2 class="section-title">Recent Projects</h2>
+
+                <div class="projects-grid">
+                    <div class="project-card">
+                        <img src="project-1.jpg" alt="">
+                        <h3>Project X</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae maiores totam, facilis ab, neque magni non eum!
+                        </p>
+                        <div class="btn-group">
+                            <div class="btn">Live Demo</div>
+                            <div class="btn">Github Repo</div>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="project-2.png" alt="">
+                        <h3>Project Y</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae maiores totam, facilis ab, neque magni non eum!
+                        </p>
+                        <div class="btn-group">
+                            <div class="btn">Live Demo</div>
+                            <div class="btn">Github Repo</div>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="project-3.png" alt="">
+                        <h3>Project Z</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae maiores totam, facilis ab, neque magni non eum!
+                        </p>
+                        <div class="btn-group">
+                            <div class="btn">Live Demo</div>
+                            <div class="btn">Github Repo</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </section>
 
         <script src="script.js"></script>
