fix: footer scss

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <i class="fa-solid fa-bars" id="menu-icon"></i>
 
-            <button class="visit-btn">Github</button>
+            <a href="https://github.com/rubatista" target="_blank" class="visit-btn">Github</a>
         </header>
 
         <section id="about" class="about">
@@ -139,6 +139,38 @@
                     </div>
                 </div>
             </section>
+
+            <section id="contact" class="contact">
+                <div class="input-box">
+                    <h2 class="section-title">Contact Me</h2>
+
+                    <div class="input">
+                        <input type="text" placeholder="example@email.com">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+
+                    <div class="btn">Submit</div>
+                </div>
+            </section>
+
+            <footer>
+                <ul>
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li>
+                        <a href="#experience">Experience</a>
+                    </li>
+                    <li>
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+
+                <p class="copyright">© All Rights Reserved | Ruben Baptista</p>
+            </footer>
         </section>
 
         <script src="script.js"></script>
